adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,9 @@
     <hr>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque voluptatum magni modi, expedita veniam quo dolorum voluptas labore atque voluptates veritatis, optio distinctio nostrum doloribus fugiat libero et excepturi nobis?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vero, atque quis possimus, aliquid expedita vitae eum ullam, cupiditate ipsam modi aspernatur non repudiandae! Culpa qui vero error beatae omnis?</p>
+
+    
 </body>
 </html>
